<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TtTMockup</string>
    <string name="action_settings">Settings</string>
    <string name="button_user_tag_entry">Enter Your Own Tag</string>
    <string name="title_activity_location">Location Tag</string>
    <string name="location_question_text">Where exactly are you reporting about?</string>
    <string name="location_question_subtext">Tell Twitter viewers the location</string>
    <string name="map_instruction_text">Locate and tap on the map the exact place you are reporting about</string>
    <string name="continue_without_location_text">continue without a location</string>
    <string name="address_hint_text">42 Wallaby Way, Sydney</string>
    <string name="enter_location_text">Enter Location</string>
    <string name="map_placeholder_text">Insert Map Here!</string>
    <string name="title_activity_map">Map Location</string>
    <string name="title_activity_category">Category Tag</string>
    <string name="category_placeholder_text">Proceed</string>
    <string name="title_activity_other">Other Tags</string>
    <string name="phone_hint_text">(XXX) XXX - XXXX</string>
    <string name="details_text">Enter Details...</string>
    <string name="review_text">Review Tweet</string>
    <string name="do_not_remind_text">Do not remind me again</string>
    <string name="title_activity_review">ReviewActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_city">CityActivity</string>
    <string name="title_activity_disaster">DisasterActivity</string>
    <string name="state_reporting_text">What location are you reporting about?</string>
    <string name="gps_text">Get Current Location</string>
    <string name="enter_text">Enter A State</string>
    <string name="or_text">or</string>
    <string name="proceed_label">></string>
    <string name="title_activity_custom_window">CustomWindow</string>
    <string name="disaster_reporting_text">What disaster are you reporting about?</string>
    <string name="enter_your_own_hint">i.e. #northhurricane</string>
    <string name="tweet_text">your tweet</string>
    <string name="character_count_text">140 left</string>
    <string name="category_question_text">What are you reporting about?</string>
    <string name="tweet_placeholder_text">Your tweet should show up here!</string>
    <string name="other_instruction_text">Add more details</string>
    <string name="other_instruction_hint">i.e. I need food, water, and shelter</string>
    <string name="photo_text">Add Photo</string>
    <string name="time_text">Time</string>
    <string name="time_text_hint">i.e. 5/8 - 6:00 pm</string>
    <string name="source_text">Source</string>
    <string name="source_text_hint">i.e. US News</string>
    <string name="contact_text">Phone</string>
    <string name="contact_text_hint">i.e. 2061234567</string>
    <string name="title_activity_review_tweet">ReviewTweetActivity</string>

</resources>