<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LocationActivity" >

    <TextView
        android:id="@+id/location_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/location_question_text"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tell_twitter_viewers_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/subtext_color"
        android:text="@string/location_question_subtext"
        android:textSize="20sp" />
    
    <FrameLayout
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:padding="1dp"
	    android:background="@color/border_color" >
	    
	    <EditText
	        android:id="@+id/enter_location_box"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:background="@color/background_color"
	        android:ems="9"
	        android:inputType="none" >
	    </EditText>
	    
    </FrameLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="25dp"
        android:paddingBottom="5dp"
        android:text="@string/map_instruction_text"
        android:textSize="20sp" />
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="25dp"
        android:paddingBottom="5dp"
        android:text="MAP GOES HERE"
        android:textSize="20sp" />
    
    <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
             >

            <Button
                android:id="@+id/proceed_state"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:onClick="chooseCategory"
                android:text="@string/proceed_label" />

			<TextView
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_alignParentLeft="true"
			    android:layout_alignParentTop="true"
			    android:text="@string/continue_without_location_text"
			    android:textColor="@color/subtext_color"
			    android:textSize="20sp" />

        </RelativeLayout>
    
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/background_box_color" >

            <TextView
                android:id="@+id/your_tweet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:paddingTop="5dp"
                android:text="@string/tweet_text"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/character_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:paddingTop="5dp"
                android:text="@string/character_count_text"
                android:textSize="20sp" />

    </RelativeLayout>

    <EditText
        android:id="@+id/tweet_display"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/tweet_box_color"
        android:ems="9"
        android:inputType="none"
        android:hint="@string/tweet_placeholder_text" >

    </EditText>
</LinearLayout>