<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".OtherActivity" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/other_instruction_text"
        android:textSize="20sp" />
    
    <FrameLayout
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:padding="1dp"
	    android:background="@color/border_color" >
	    
	            <EditText
	                android:id="@+id/state_text_box"
	                android:layout_width="fill_parent"
	                android:layout_height="wrap_content"
	                android:background="@color/background"
	                android:ems="9"
	                android:hint="@string/other_instruction_text"
	                android:inputType="none" >
	            </EditText>
	            
	</FrameLayout>
    
    <EditText
        android:id="@+id/edit_message"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:ems="10"
        android:hint="@string/phone_hint_text"
        android:phoneNumber="true" >

    </EditText>

    <EditText
        android:id="@+id/edit_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/edit_message"
        android:layout_toRightOf="@+id/photo_button"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/photo_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/edit_details"
        android:layout_alignBottom="@+id/edit_details"
        android:layout_alignParentLeft="true"
        android:hint="@string/details_text"
        android:text="@string/photo_text" />

    <Button
        android:id="@+id/review_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/photo_button"
        android:layout_centerHorizontal="true"
        android:onClick="reviewTweet"
        android:text="@string/review_text" />

</LinearLayout>